2013-02-11 Sarka Todorova <sarka.todorova@cern.ch>
	* add python builder configuration 
	* tagged as MuonTrackingGeometry-00-05-47 

2012-07-27 Felix Rauscher
	* CLHEP 2.x
	* propdel svn:executable
	* tagged as MuonTrackingGeometry-00-05-46

2012-05-11 Sarka Todorova <sarka.todorova@cern.ch>
	* outer radius increased to 13400 mm, half-length becomes 26050 mm 
	* to take into account new (inert) material 
	* tagged as MuonTrackingGeometry-00-05-45 

2012-04-26 Sarka Todorova <sarka.todorova@cern.ch>
	* outer radius increased to 13010 mm 
	* tagged as MuonTrackingGeometry-00-05-44 

2011-12-01 Sarka Todorova <sarka.todorova@cern.ch>
	* merged with branch MuonTrackingGeometry-00-05-40-02
	* tagged as MuonTrackingGeometry-00-05-43 

2011-11-08 Sarka Todorova <sarka.todorova@cern.ch>
	* suppress (unused) MsgStream instantiations
	* tagged as MuonTrackingGeometry-00-05-42 

2011-10-11 Sarka Todorova <sarka.todorova@cern.ch>
	* suppress printout in inert material build-up (a problem in conical volume,
	* conical surfaces now available, update required  )
	* tagged as MuonTrackingGeometry-00-05-41 
	
2011-06-15 Susumu Oda <Susumu.Oda@cern.ch>
	* fix bug #81921: ERROR ToolSvc.MuonStationBuilder invalid TGC 
	  channel:4294950912 (src/MuonStationBuilder.cxx). 
	* tagged as MuonTrackingGeometry-00-05-40 
	
2011-06-09 Sarka Todorova <sarka.todorova@cern.ch>
	* fix memory leak
	* tagged as MuonTrackingGeometry-00-05-39

2011-05-13 Susumu Oda <Susumu.Oda@cern.ch>
	* suppress info messages on TGC strip plane shifts (bug #81921)
	* tagged as MuonTrackingGeometry-00-05-38 

2011-05-06 Sarka Todorova <sarka.todorova@cern.ch>
	* suppress error messages in TGC identification ( temporary )
	* tagged as MuonTrackingGeometry-00-05-37

2011-04-29 Sarka Todorova <sarka.todorova@cern.ch>
	* clear TGC cache to get rid of surfaces with invalid id
	* tagged as MuonTrackingGeometry-00-05-36

2011-04-29 Sarka Todorova <sarka.todorova@cern.ch>